[add] user logic and index mongodb for users
