# model/user.go
@@ -1,19 +1,17 @@
 package model
 
 import (
-	"go.mongodb.org/mongo-driver/bson/primitive"
 	"time"
 )
 
 type User struct {
-	ID        primitive.ObjectID `bson:"_id,omitempty" json:"id"`
-	UID       string             `bson:"uid" json:"uid"`
-	Username  string             `bson:"username" json:"username"`
-	FullName  string             `bson:"full_name" json:"full_name"`
-	Email     string             `bson:"email" json:"email"`
-	Password  []byte             `bson:"password,omitempty" json:"-"`
-	Roles     []string           `bson:"roles" json:"roles"`
-	IsActive  bool               `bson:"is_active" json:"is_active"`
-	CreatedAt time.Time          `bson:"created_at" json:"created_at"`
-	UpdatedAt time.Time          `bson:"updated_at" json:"updated_at"`
+	UID       string    `bson:"uid" json:"uid"`
+	Username  string    `bson:"username" json:"username"`
+	FullName  string    `bson:"full_name" json:"full_name"`
+	Email     string    `bson:"email" json:"email"`
+	Password  []byte    `bson:"password,omitempty" json:"-"`
+	Roles     []string  `bson:"roles" json:"roles"`
+	IsActive  bool      `bson:"is_active" json:"is_active"`
+	CreatedAt time.Time `bson:"created_at" json:"created_at"`
+	UpdatedAt time.Time `bson:"updated_at" json:"updated_at"`
 }
