# router/user_router.go
@@ -8,6 +8,12 @@ import (
 func RegisterUserRoutes(r *gin.Engine, app *wire.App) {
 	userRouter := r.Group("/user")
 	{
-		userRouter.POST("/create")
+		userRouter.POST("/create", app.UserCtrl.Create)
+		userRouter.GET("/")
+		userRouter.GET("/me", app.UserCtrl.Me)
+		userRouter.GET("/uid/:uid", app.UserCtrl.FindByUID)
+		userRouter.GET("/username/:username", app.UserCtrl.FindByUsername)
+		userRouter.PUT("/:uid", app.UserCtrl.Update)
+		userRouter.DELETE("/:uid", app.UserCtrl.Delete)
 	}
 }
